--- a/index.html
+++ b/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>Let's Doodle</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-
-<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="style.css" />
-<title>Drawing App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Drawing App</title>
 </head>
 <body>
-<canvas id="canvas" width="600" height="500"></canvas>
-<div class="toolbox">
-<button id="decrease">-</button>
-<span id="size">5</span>
-<button id="increase">+</button>
-<input type="color" id="color">
-<button id="clear">X</button>
-</div>
-<script src="script.js"></script>
-</body>
-</html>
-
-  <script  src="./script.js"></script>
-
+  <h1>Let's Doodle</h1>
+  <canvas id="canvas" width="600" height="500"></canvas>
+  <div class="toolbox">
+    <button id="decrease" title="Decrease Brush Size">-</button>
+    <span id="size">5</span>
+    <button id="increase" title="Increase Brush Size">+</button>
+    <input type="color" id="color" title="Choose Brush Color">
+    <span id="current-color"></span>
+    <button id="clear" title="Clear Canvas">Clear</button>
+    <button id="reset" title="Reset Settings">Reset</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
